# uet-thesis

./: .env  .env.example  .gitignore  DETECTION_RESEARCH.md  IMPLEMENTATION-SUMMARY.md  MVP.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SCENARIO_SETUP.md  SETUP.md  SETUP_GUIDE.md  SIMPLE_DEX.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  quick_start.sh
contracts/: .env.local  .gitignore  COMPOUND_MARKET.md  FLASH_LOAN.md  LENDING_PROTOCOL.md  Move.toml  README.md  SCENARIO.md  check.sh  drain_pool.sh  sc2.sh  (+12 more)
sui-indexer/: .cursorignore  .env  ANALYZER_SIGNALS.md  Cargo.toml  DETECTION.md  DETECTION_SYSTEM.md  README-CLEAN-ARCHITECTURE.md  create_attack_tx.sh  elasticsearch-flattened-mapping.json  elasticsearch-mapping.json  test_detection.sh
sui-indexer/migrations/2025-11-25-104733-0000_transaction_digests/: up.sql
sui-indexer/migrations/2025-11-27-transactions/: up.sql
sui-indexer/migrations/2025-11-30-175742-final-schema/: down.sql  up.sql
sui-indexer/migrations/2025-11-30-clean-architecture/: down.sql  up.sql
sui-indexer/migrations/2025-11-30-clean-simple/: down.sql  up.sql
sui-indexer/migrations/2025-11-30-dual-layer/: down.sql  up.sql
sui-indexer/scenarios/: README.md  run_all_scenarios.sh  scenario_A_flash_loan.sh  scenario_B_price_manipulation.sh  scenario_C_sandwich_attack.sh  scenario_D_oracle_manipulation.sh  verify_detections.sh
sui-indexer/src/: constants.rs  elasticsearch.rs  events.rs  handlers.rs  main.rs  models.rs  schema.rs
sui-indexer/src/action/: alert.rs  handler.rs  log.rs  mock_defense.rs  mod.rs
sui-indexer/src/analyzer/: flash_loan.rs  mod.rs  oracle_manipulation.rs  price.rs  sandwich.rs
sui-indexer/src/framework/: action_manager.rs  detection_engine.rs  mod.rs
sui-indexer/src/models/: detection.rs  elasticsearch.rs  es_flattener.rs  es_transaction.rs  event.rs  legacy.rs  mod.rs  move_call.rs  object.rs  transaction.rs  transaction_effect.rs  transaction_object.rs
sui-indexer/src/pipeline/: detector.rs  flash_loan.rs  mod.rs  oracle_manipulation.rs  price_manipulation.rs  sandwich.rs
sui-indexer/src/risk/: mod.rs  models.rs
sui-indexer/src/services/: elasticsearch_transformer.rs  mod.rs  transaction_extractor.rs
(+90 files in other folders)
