[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.0"

async-trait = "0.1"
url = "2.0"
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Elasticsearch client
elasticsearch = "8.15.0-alpha.1"
