[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Sui dependencies
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database - PostgreSQL
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.0"

# Elasticsearch client
elasticsearch = "8.15.0-alpha.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"
hex = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }

# Utilities
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for actions (Slack, webhooks, etc.)
reqwest = { version = "0.11", features = ["json"] }
